# coil-control-rs

./: Cargo.toml  README.md  openocd.gdb
.github/workflows/: rust.yml
src/: main.rs
